Test auto-deployment from GitHub to Netlify

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Physics Simulation -->
         <section class="simulation-section">
             <canvas id="physics-canvas" class="physics-canvas"></canvas>
-            <p class="simulation-caption">Wave interference pattern</p>
+            <p class="simulation-caption">Wave interference pattern • Auto-deploy test</p>
         </section>
 
         <!-- Location Section -->
