--- a/publications.html
+++ b/publications.html
@@ -90,6 +90,10 @@
 
         <footer>
             <p>&copy; 2025 Nicholas Harris</p>
+            <div class="footer-links">
+                <a href="https://x.com/theanalognick" target="_blank">X</a>
+                <a href="https://www.linkedin.com/in/nicholas-harris-7114b233/" target="_blank">LinkedIn</a>
+            </div>
         </footer>
     </main>
 
