Fix simulation: replace waveguide coupling with dipole radiation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Physics Simulation -->
         <section class="simulation-section">
             <canvas id="physics-canvas" class="physics-canvas"></canvas>
-            <p class="simulation-caption">Photonic waveguide coupling</p>
+            <p class="simulation-caption">Dipole radiation</p>
         </section>
 
         <!-- Location Section -->
