Add Optica Fellow 2026 to CV recognition

--- a/cv.html
+++ b/cv.html
@@ -82,6 +82,11 @@
             <h2 class="cv-section-title">Recognition</h2>
 
             <div class="cv-award">
+                <p class="cv-award-title">Optica Fellow</p>
+                <span class="cv-year">2026</span>
+            </div>
+
+            <div class="cv-award">
                 <p class="cv-award-title">Goldman Sachs Most Exceptional Entrepreneurs</p>
                 <span class="cv-year">2025</span>
             </div>
