Add SEO: meta tags, Open Graph, JSON-LD structured data, alt text

--- a/cv.html
+++ b/cv.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Nicholas Harris</title>
+    <meta name="description" content="Curriculum vitae for Nicholas Harris: Founder of Lightmatter, MIT PhD, Optica Fellow, 87+ patents, 82 publications. Experience in photonic computing and quantum optics.">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="profile">
+    <meta property="og:url" content="https://nicholascharris.com/cv.html">
+    <meta property="og:title" content="CV - Nicholas Harris">
+    <meta property="og:description" content="Founder of Lightmatter, MIT PhD, Optica Fellow, 87+ patents, 82 publications.">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="CV - Nicholas Harris">
+
+    <link rel="canonical" href="https://nicholascharris.com/cv.html">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
