--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - Nicholas Harris</title>
+    <meta name="description" content="Scientific illustrations, photography, and microscopy by Nicholas Harris. Visual documentation of integrated photonics research and quantum optics experiments.">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://nicholascharris.com/gallery.html">
+    <meta property="og:title" content="Gallery - Nicholas Harris">
+    <meta property="og:description" content="Scientific illustrations, photography, and microscopy from photonics research.">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Gallery - Nicholas Harris">
+
+    <link rel="canonical" href="https://nicholascharris.com/gallery.html">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
