--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nicholas Harris</title>
+    <title>Nicholas Harris - Founder of Lightmatter, Photonics Pioneer</title>
+    <meta name="description" content="Nicholas Harris is the founder and CEO of Lightmatter, pioneering photonic computing for AI. PhD from MIT, 87+ patents, 9,444 citations, Optica Fellow.">
+    <meta name="author" content="Nicholas Harris">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://nicholascharris.com/">
+    <meta property="og:title" content="Nicholas Harris - Founder of Lightmatter, Photonics Pioneer">
+    <meta property="og:description" content="Founder and CEO of Lightmatter, pioneering photonic computing for AI. PhD from MIT, 87+ patents, 9,444 citations.">
+    <meta property="og:site_name" content="Nicholas Harris">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@theanalognick">
+    <meta name="twitter:creator" content="@theanalognick">
+    <meta name="twitter:title" content="Nicholas Harris - Founder of Lightmatter, Photonics Pioneer">
+    <meta name="twitter:description" content="Founder and CEO of Lightmatter, pioneering photonic computing for AI. PhD from MIT, 87+ patents, 9,444 citations.">
+
+    <link rel="canonical" href="https://nicholascharris.com/">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -59,7 +77,7 @@
             <div class="content">
                 <div class="heritage-grid">
                     <div class="heritage-item">
-                        <img src="images/heritage/lee-blodget.png" alt="Lee Merritt Blodget" class="heritage-photo">
+                        <img src="images/heritage/lee-blodget.png" alt="Lee Merritt Blodget, photographer and understudy to Ansel Adams" class="heritage-photo">
                         <h3>Lee Merritt Blodget</h3>
                         <p class="relation">Great-grandfather</p>
                         <p class="years">1919-1995</p>
@@ -68,7 +86,7 @@
                     </div>
 
                     <div class="heritage-item">
-                        <img src="images/heritage/rene-prestwood.png" alt="Rene Prestwood" class="heritage-photo">
+                        <img src="images/heritage/rene-prestwood.png" alt="Rene Prestwood, Manhattan Project chemist" class="heritage-photo">
                         <h3>Rene Prestwood</h3>
                         <p class="relation">Great-grandpibling</p>
                         <p class="years">1920-2012</p>
@@ -77,7 +95,7 @@
                     </div>
 
                     <div class="heritage-item">
-                        <img src="images/heritage/bobby-vilas.jpg" alt="Bobby Vilas" class="heritage-photo">
+                        <img src="images/heritage/bobby-vilas.jpg" alt="Bobby Vilas, photographer and industrial designer" class="heritage-photo">
                         <h3>Bobby Vilas</h3>
                         <p class="relation">Uncle</p>
                         <p class="years">&nbsp;</p>
@@ -125,6 +143,45 @@
             </div>
         </footer>
     </main>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Nicholas Harris",
+        "url": "https://nicholascharris.com",
+        "sameAs": [
+            "https://x.com/theanalognick",
+            "https://www.linkedin.com/in/nicholas-harris-7114b233/",
+            "https://scholar.google.com/citations?user=YBNCZgoAAAAJ"
+        ],
+        "jobTitle": "Founder, President, and CEO",
+        "worksFor": {
+            "@type": "Organization",
+            "name": "Lightmatter"
+        },
+        "alumniOf": [
+            {
+                "@type": "Organization",
+                "name": "Massachusetts Institute of Technology",
+                "sameAs": "https://www.mit.edu"
+            },
+            {
+                "@type": "Organization",
+                "name": "University of Idaho"
+            }
+        ],
+        "award": [
+            "Optica Fellow (2026)",
+            "Goldman Sachs Most Exceptional Entrepreneurs (2025)",
+            "Boston Globe Tech Power Players 50 (2024)",
+            "MIT Technology Review 35 Innovators Under 35 (2021)",
+            "Photonics100 (2022)"
+        ],
+        "description": "Founder and CEO of Lightmatter, pioneering photonic computing and AI acceleration. PhD from MIT in integrated photonics and quantum computing."
+    }
+    </script>
 
     <script src="js/script.js"></script>
     <script src="js/simulation.js"></script>
