--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications - Nicholas Harris</title>
+    <meta name="description" content="Selected publications by Nicholas Harris on silicon photonics, quantum computing, and photonic AI acceleration. Published in Nature, Nature Photonics, and Physical Review X.">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://nicholascharris.com/publications.html">
+    <meta property="og:title" content="Publications - Nicholas Harris">
+    <meta property="og:description" content="Selected publications on silicon photonics, quantum computing, and photonic AI acceleration.">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Publications - Nicholas Harris">
+
+    <link rel="canonical" href="https://nicholascharris.com/publications.html">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
