Add Speaking page with all talks and keynotes

--- a/gallery.html
+++ b/gallery.html
@@ -25,6 +25,7 @@
         <div class="nav-links">
             <a href="publications.html">Publications</a>
             <a href="cv.html">CV</a>
+            <a href="speaking.html">Speaking</a>
             <a href="gallery.html" class="active">Gallery</a>
         </div>
     </nav>
