--- a/cv.html
+++ b/cv.html
@@ -25,6 +25,7 @@
         <div class="nav-links">
             <a href="publications.html">Publications</a>
             <a href="cv.html" class="active">CV</a>
+            <a href="speaking.html">Speaking</a>
             <a href="gallery.html">Gallery</a>
         </div>
     </nav>
