--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="nav-links">
             <a href="publications.html">Publications</a>
             <a href="cv.html">CV</a>
+            <a href="speaking.html">Speaking</a>
             <a href="gallery.html">Gallery</a>
         </div>
     </nav>
