--- a/publications.html
+++ b/publications.html
@@ -25,6 +25,7 @@
         <div class="nav-links">
             <a href="publications.html" class="active">Publications</a>
             <a href="cv.html">CV</a>
+            <a href="speaking.html">Speaking</a>
             <a href="gallery.html">Gallery</a>
         </div>
     </nav>
