--- a/speaking.html
+++ b/speaking.html
@@ -133,6 +133,14 @@
                 </div>
             </article>
 
+            <article class="publication">
+                <div class="pub-content">
+                    <h3 class="pub-title">Sequoia Capital AI Ascent</h3>
+                    <p class="pub-meta">March 2024 · Panel</p>
+                    <p class="pub-abstract">What's next for datacenters and powering the next generation of AI models</p>
+                </div>
+            </article>
+
             <h2 class="cv-section-title">2023</h2>
 
             <article class="publication">
@@ -185,13 +193,6 @@
                 </div>
             </article>
 
-            <article class="publication">
-                <div class="pub-content">
-                    <h3 class="pub-title">Sequoia Capital AI Ascent</h3>
-                    <p class="pub-meta">Panel</p>
-                    <p class="pub-abstract">What's next for datacenters and powering the next generation of AI models</p>
-                </div>
-            </article>
         </section>
 
         <footer>
