Add GV Future of Compute panel (November 2024)

--- a/speaking.html
+++ b/speaking.html
@@ -135,6 +135,14 @@
 
             <article class="publication">
                 <div class="pub-content">
+                    <h3 class="pub-title">GV Future of Compute</h3>
+                    <p class="pub-meta">San Francisco, CA · November 6, 2024 · Panel</p>
+                    <p class="pub-abstract">Next generation of compute leaders</p>
+                </div>
+            </article>
+
+            <article class="publication">
+                <div class="pub-content">
                     <h3 class="pub-title">Sequoia Capital AI Ascent</h3>
                     <p class="pub-meta">March 2024 · Panel</p>
                     <p class="pub-abstract">What's next for datacenters and powering the next generation of AI models</p>
