--- a/speaking.html
+++ b/speaking.html
@@ -19,6 +19,7 @@
     <link rel="canonical" href="https://nicholascharris.com/speaking.html">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/speaking.css">
 </head>
 <body>
     <nav class="main-nav">
@@ -43,7 +44,8 @@
             <p class="featured-description">How to innovate at the speed of light</p>
         </section>
 
-        <section class="publications-list">
+        <section class="speaking-section">
+            <h2 class="speaking-section-title">2026</h2>
             <article class="publication">
                 <div class="pub-content">
                     <h3 class="pub-title">SPIE Photonics West</h3>
@@ -58,7 +60,10 @@
                     <p class="pub-meta">January 2026 · Talk</p>
                 </div>
             </article>
+        </section>
 
+        <section class="speaking-section">
+            <h2 class="speaking-section-title">2025</h2>
             <article class="publication">
                 <div class="pub-content">
                     <h3 class="pub-title"><a href="https://www.youtube.com/watch?v=GMpsmTJh1sw" target="_blank">Optica (Optical Society of America)</a> <span class="youtube-tag">YouTube</span></h3>
@@ -150,7 +155,10 @@
                     <p class="pub-abstract">Spotlight on Passage product, supply chain partnerships, and roadmap for pluggable fibers</p>
                 </div>
             </article>
+        </section>
 
+        <section class="speaking-section">
+            <h2 class="speaking-section-title">2024</h2>
             <article class="publication">
                 <div class="pub-content">
                     <h3 class="pub-title">MIT iQuISE Seminar</h3>
@@ -166,7 +174,12 @@
                     <p class="pub-abstract">What's next for datacenters and powering the next generation of AI models</p>
                 </div>
             </article>
+        </section>
 
+        <section class="publications-list">
+
+        <section class="speaking-section">
+            <h2 class="speaking-section-title">2023</h2>
             <article class="publication">
                 <div class="pub-content">
                     <h3 class="pub-title"><a href="https://thisweekinstartups.com/episodes/KxFltidW6DM" target="_blank">This Week in Startups (Ep. 1787)</a> <span class="youtube-tag">YouTube</span> <span class="podcast-tag">Podcast</span></h3>
@@ -197,7 +210,10 @@
                     <p class="pub-abstract">Interconnect bottlenecks and the role of optics in AI clusters</p>
                 </div>
             </article>
+        </section>
 
+        <section class="speaking-section">
+            <h2 class="speaking-section-title">2022</h2>
             <article class="publication">
                 <div class="pub-content">
                     <h3 class="pub-title">Hot Chips</h3>
@@ -221,7 +237,10 @@
                     <p class="pub-abstract">Accelerating artificial intelligence with light</p>
                 </div>
             </article>
+        </section>
 
+        <section class="speaking-section">
+            <h2 class="speaking-section-title">2021</h2>
             <article class="publication">
                 <div class="pub-content">
                     <h3 class="pub-title">EmTech Digital</h3>
@@ -244,7 +263,10 @@
                     <p class="pub-abstract">Beating Moore's Law: This photonic computer is 10X faster</p>
                 </div>
             </article>
-
+        </section>
+        
+        <section class="speaking-section">
+            <h2 class="speaking-section-title">Misc</h2>
             <article class="publication">
                 <div class="pub-content">
                     <h3 class="pub-title">IEEE ISCAS</h3>
